# ddd-work

./: pyproject.toml
05/: active_record.py  transaction_01.py  transaction_02.py
06_domain_model/: aggregate.py  aggregate_2.py  aggregate_3.py  aggregate_4.py  complexity.py  domain_event.py  domain_service.py  entity.py  value_object.py
06_domain_model/db/: models.py
07_event_sourced_domain_model/: event_sourcing.py  event_sourcing_analysis.py  event_sourcing_domain_model.py  event_sourcing_search.py  events.json  overload_function.py  overload_method.py
08_architecture/: 3_layered_architecture.py  4_layered_architecture.py  port_and_adapter.py
08_architecture/db/: README.md  create_all.py  drop_all.py  models.py
08_architecture/port_and_adapter/: README.md  app.py  create_all.py  drop_all.py
08_architecture/port_and_adapter/adapters/db/sqlalchemy/: uow.py  user_repository.py
08_architecture/port_and_adapter/application/: dto.py  ports.py
08_architecture/port_and_adapter/application/http/fastapi/: api.py  schemas.py
08_architecture/port_and_adapter/application/use_cases/: list_users.py
08_architecture/port_and_adapter/domain/: errors.py  user.py
