[project]
name = "ddd"
version = "0.1.0"
description = ""
authors = [
    {name = "ktamido"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.8,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "fastapi[all] (>=0.116.2,<0.117.0)",
    "cryptography (>=46.0.1,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.1"

